mostly port to 1.18.2, 88 errors left